--- a/projects.html
+++ b/projects.html
@@ -114,7 +114,7 @@
 														</div>
 												<br>
 									<!-- Project details -->
-										<h3>Project Name</h3>
+										<h3>Peshawar Blood Camp</h3>
 										<p>September 24, 2020, Peshawar team held a small scale blood camp of _ total pints donated.
 
 											 An informative demonstration was also conducted in collaboration with <a href="#">Hamza Foundation</a>,
