--- a/projects.html
+++ b/projects.html
@@ -115,15 +115,14 @@
 												<br>
 									<!-- Project details -->
 										<h3>Peshawar Blood Camp</h3>
-										<p>September 24, 2020, Peshawar team held a small scale blood camp of _ total pints donated.
+										<p>September 24, 2020, Peshawar team held a small scale blood camp of 15+ total pints donated.
 
 											 An informative demonstration was also conducted in collaboration with <a href="#">Hamza Foundation</a>,
-											 where the Team was showed the workings of the foundation, it's contributions and achievements
-											 by Mr. Mian Attique, Mr. Attique and Dr.Tariq.</p>
+											 where Mr. Mian Attique, Mr. Attique and Dr. Tariq showed the team the workings of the foundation, its contributions and achievements.</p>
 										 <p>The team spent a memorable day with the children of the Foundation. The Camp was led by our
 											  Directors, Dr. Gulalai Arshad and Syed Shakeel Badshah, Deputy Director, Sumayyah Saqib, KPK representative,
 													 Syeda Ramsha Hassan and Peshawar representative, Ashraf Ali. The organizing team of the camp constituted
-														  of Talha Shinwari, Zaryab-, All names.</p>
+														  of Talha Shinwari, Zaryab, Shoaib, Talha, Ashraf and other members.</p>
 										 <p>Inshallah we will continue such camps to arrange blood donors and to create awareness and to promote
 														 prevention of thalassemia.We thank our donors for taking out the time and coming to donate.</p>
 										 <p>Help Us Grow Our Blood Donation Camps, <a href="#">Donate Now</a></p>
