--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
 						<header class="major">
 							<h2>OUR PROJECTS</h2>
 							<!-- <p></p> -->
-							<p>The Blod Heroes is a student-based nationwide blood society whose main goal is voluntarily
+							<p>The Blood Heroes is a student-based nationwide blood society whose main goal is voluntarily
 								providing blood to the needy, promoting voluntary blood donations, and spreading awareness
 								about blood-related issues. We organize projects like The Bleed Green, where we arrange blood
 								donation volunteers registration, awareness events, blood donation camps and visits thalassemia
@@ -122,7 +122,7 @@
 										 <p>The team spent a memorable day with the children of the Foundation. The Camp was led by our
 											  Directors, Dr. Gulalai Arshad and Syed Shakeel Badshah, Deputy Director, Sumayyah Saqib, KPK representative,
 													 Syeda Ramsha Hassan and Peshawar representative, Ashraf Ali. The organizing team of the camp constituted
-														  of Talha Shinwari, Zaryab, Shoaib, Talha, Ashraf and other members.</p>
+														  of Talha Shinwari, Zaryab, Shoaib, Ashraf and other members.</p>
 										 <p>Inshallah we will continue such camps to arrange blood donors and to create awareness and to promote
 														 prevention of thalassemia.We thank our donors for taking out the time and coming to donate.</p>
 										 <p>Help Us Grow Our Blood Donation Camps, <a href="#">Donate Now</a></p>
@@ -279,7 +279,7 @@
 															<br>
 												<!-- Project details -->
 													<h3>Project Name</h3>
-													<p>September 24, 2020, Peshawar team held a small scale blood camp of _ total pints donated <a href="#">learn more.</a></p>
+													<p>September 24, 2020, Peshawar team held a small scale blood camp of 15+ total pints donated <a href="#">learn more.</a></p>
 												<hr>
 										</div>
 											<footer>
